--- a/XrmSdkWebApi/XrmSdk.TSEntityClassGenerator/App.config
+++ b/XrmSdkWebApi/XrmSdk.TSEntityClassGenerator/App.config
@@ -1,9 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="crm" connectionString="Url=https://contoso.crm4.dynamics.com; Username=user@contoso.onmicrosoft.com; Password=LetMeIn; authtype=Office365"/>
   </connectionStrings>
+  <appSettings>
+    <add key="RedirectUrl" value="http://localhost/xrmsdktsentityclassgenerator" />
+    <add key="ClientId" value="ef9166ae-8d3f-48c9-b260-243d29f15355" />
+    <add key="WebApiMetadataFilename" value="ODataV4Metadata.xml" />
+  </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.22.0.0" newVersion="2.22.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.22.0.0" newVersion="2.22.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
